--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,12 +30,16 @@
 
 
     </LinearLayout>
+    <ScrollView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content" >
 
     <TextView
         android:id="@+id/timetable"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/outTimetable" />
+    </ScrollView>
 
     <Spinner
         android:id="@+id/chooseFaculty"
