--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,8 @@
             android:hint="@string/Course"
             android:inputType="numberDecimal"
             android:padding="10dp"
-            android:textSize="24sp" />
+            android:textSize="24sp"
+            android:autofillHints="" />
 
         <Button
             android:id="@+id/confirm_faculty_course"
@@ -30,21 +31,30 @@
 
 
     </LinearLayout>
-    <ScrollView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content" >
 
-    <TextView
-        android:id="@+id/timetable"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/outTimetable" />
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/timetable"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/outTimetable" />
     </ScrollView>
 
     <Spinner
         android:id="@+id/chooseFaculty"
         android:layout_width="match_parent"
-        android:layout_height="50dp">
-    </Spinner>
+        android:layout_height="50dp"/>
+
+    <Button
+        android:id="@+id/clear_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:insetLeft="150dp"
+        android:insetRight="150dp"
+        android:text="Очистить"/>
+
 
 </LinearLayout>
