--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,7 @@
             android:id="@+id/confirm_faculty_course"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:onClick="ConfirmButtonPressed"
             android:text="@string/confirm" />
 
 
