--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,72 +1,74 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingBottom="10dp">
+        android:orientation="vertical"
+        android:padding="16dp">
+
+        <Spinner
+            android:id="@+id/EducationalFormat"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginBottom="16dp" />
+
+        <Spinner
+            android:id="@+id/typeOfEducation"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginBottom="16dp"
+            tools:visibility="visible" />
+
+        <Spinner
+            android:id="@+id/Faculty"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginBottom="16dp"
+            tools:visibility="visible" />
 
         <EditText
             android:id="@+id/Course"
-            android:layout_width="269dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:autofillHints=""
             android:hint="@string/Course"
             android:inputType="numberDecimal"
             android:padding="10dp"
             android:textSize="24sp"
-            android:autofillHints="" />
+            tools:visibility="visible" />
 
         <Button
             android:id="@+id/confirm_faculty_course"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="16dp"
             android:onClick="ConfirmButtonPressed"
-            android:text="@string/confirm" />
+            android:text="@string/confirm"
+            tools:visibility="visible" />
 
-
-    </LinearLayout>
-
-    <Spinner
-        android:id="@+id/chooseFaculty"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"/>
-
-    <Button
-        android:id="@+id/clear_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:insetLeft="150dp"
-        android:insetRight="150dp"
-        android:text="@string/clear"
-        android:onClick="ClearAll" />
-
-    <ScrollView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/timetable"
-            android:layout_width="match_parent"
+        <Button
+            android:id="@+id/clear_button"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/outTimetable" />
-    </ScrollView>
+            android:layout_gravity="center"
+            android:text="@string/clear"
+            android:onClick="ClearAll" />
 
-    <ScrollView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="s" />
-    </ScrollView>
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-
-</LinearLayout>
+            <TextView
+                android:id="@+id/timetable"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/outTimetable" />
+        </ScrollView>
+    </LinearLayout>
+</RelativeLayout>
