--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_horizontal"
     tools:context=".MainActivity">
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_gravity="center"
+        android:visibility="invisible" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -10,13 +22,7 @@
         android:orientation="vertical"
         android:padding="16dp">
 
-        <Spinner
-            android:id="@+id/EducationalFormat"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginBottom="16dp" />
-
-        <Spinner
+    <Spinner
             android:id="@+id/typeOfEducation"
             android:layout_width="match_parent"
             android:layout_height="50dp"
@@ -28,6 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginBottom="16dp"
+            android:animateLayoutChanges="true"
             tools:visibility="visible" />
 
         <EditText
@@ -40,6 +47,15 @@
             android:inputType="numberDecimal"
             android:padding="10dp"
             android:textSize="24sp"
+            android:animateLayoutChanges="true"
+            tools:visibility="visible" />
+
+        <Spinner
+            android:id="@+id/Groups"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginBottom="16dp"
+            android:animateLayoutChanges="true"
             tools:visibility="visible" />
 
         <Button
@@ -68,7 +84,9 @@
                 android:id="@+id/timetable"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:animateLayoutChanges="true"
                 android:text="@string/outTimetable" />
         </ScrollView>
     </LinearLayout>
+    </FrameLayout>
 </RelativeLayout>
