--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,31 +3,66 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
+    android:background="@color/brightBG"
     tools:context=".MainActivity">
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_gravity="center"
-        android:visibility="invisible" />
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            android:visibility="invisible" />
+
+    </FrameLayout>
+
+    <RelativeLayout
+        android:id="@+id/upperBG"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/brightBlue">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="80dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="20dp"
+            android:fontFamily="@font/montserrat_bold"
+            android:text="@string/Greetings"
+            android:textColor="@color/white"
+            android:textSize="24sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="58dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="20dp"
+            android:fontFamily="@font/montserrat_bold"
+            android:text="@string/toolTip"
+            android:textColor="@color/white"
+            android:textSize="14sp" />
+
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="16dp">
+        android:layout_height="match_parent"
+        android:layout_below="@+id/upperBG"
+        android:layout_margin="10dp"
+        android:orientation="vertical">
 
-    <Spinner
+        <Spinner
             android:id="@+id/typeOfEducation"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginBottom="16dp"
-            tools:visibility="visible" />
+            android:layout_marginBottom="16dp" />
 
         <Spinner
             android:id="@+id/Faculty"
@@ -35,7 +70,7 @@
             android:layout_height="50dp"
             android:layout_marginBottom="16dp"
             android:animateLayoutChanges="true"
-            tools:visibility="visible" />
+            android:visibility="gone" />
 
         <EditText
             android:id="@+id/Course"
@@ -48,7 +83,7 @@
             android:padding="10dp"
             android:textSize="24sp"
             android:animateLayoutChanges="true"
-            tools:visibility="visible" />
+            android:visibility="gone" />
 
         <Spinner
             android:id="@+id/Groups"
@@ -56,7 +91,7 @@
             android:layout_height="50dp"
             android:layout_marginBottom="16dp"
             android:animateLayoutChanges="true"
-            tools:visibility="visible" />
+            android:visibility="gone" />
 
         <Button
             android:id="@+id/confirm_faculty_course"
@@ -65,8 +100,19 @@
             android:layout_gravity="center"
             android:layout_marginBottom="16dp"
             android:onClick="ConfirmButtonPressed"
-            android:text="@string/confirm"
-            tools:visibility="visible" />
+            android:backgroundTint="@color/darkBlue"
+            android:text="@string/confirm" />
+
+        <Button
+            android:id="@+id/SaveButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="16dp"
+            android:onClick="SaveButtonPressed"
+            android:text="@string/SaveButton"
+            android:backgroundTint="@color/darkBlue"
+            android:visibility="gone" />
 
         <Button
             android:id="@+id/clear_button"
@@ -74,19 +120,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/clear"
+            android:backgroundTint="@color/darkBlue"
             android:onClick="ClearAll" />
 
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/timetable"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:animateLayoutChanges="true"
-                android:text="@string/outTimetable" />
-        </ScrollView>
-    </LinearLayout>
-    </FrameLayout>
+</LinearLayout>
 </RelativeLayout>
