--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,15 +1,16 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.VyatsuApp" parent="Theme.Material3.DayNight.NoActionBar">
-        <item name="colorPrimary">#0da8d6</item>
-        <item name="colorPrimaryVariant">#076dab</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <item name="android:textColorPrimary">@color/black</item>
-        <item name="colorOnSecondary">@color/black</item>
+
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.VyatsuApp" parent="Base.Theme.VyatsuApp" />
+    <style name="Theme.VyatsuApp" parent="Base.Theme.VyatsuApp" >
+        <item name="colorPrimary">@color/brightBlue</item>
+        <item name="colorPrimaryDark">@color/brightBlue</item>
+        <item name="android:textColorPrimary">#CE000000</item>
+        <item name="colorOnSecondary">@color/black</item>
+    </style>
 
 </resources>
