--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="darkBlue">#076dab</color>
     <color name="brightBlue">#0da8d6</color>
     <color name="grey">#808080</color>
+    <color name="brightGrey">#919191</color>
 </resources>
