--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,36 +1,23 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_horizontal"
     android:background="@color/brightBG"
+    android:gravity="center_horizontal"
     tools:context=".MainActivity">
-
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <ProgressBar
-            android:id="@+id/progressBar"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_gravity="center"
-            android:visibility="invisible" />
-
-    </FrameLayout>
 
     <RelativeLayout
         android:id="@+id/upperBG"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="140dp"
         android:background="@color/brightBlue">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="80dp"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="24dp"
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="20dp"
             android:fontFamily="@font/montserrat_bold"
@@ -42,7 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="58dp"
+            android:layout_marginTop="70dp"
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="20dp"
             android:fontFamily="@font/montserrat_bold"
@@ -61,118 +48,189 @@
         <com.skydoves.powerspinner.PowerSpinnerView
             android:id="@+id/EducationTypeSpinner"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:gravity="center"
+            android:layout_height="80dp"
+            android:layout_margin="10dp"
             android:background="@color/brightBG"
+            android:fadeScrollbars="false"
+            android:fontFamily="@font/montserrat_bold"
+            android:gravity="left|center"
             android:hint="@string/selectEducationType"
+            android:paddingStart="16dp"
+            android:scrollbarSize="20dp"
+            android:scrollbarStyle="outsideInset"
+            android:scrollbars="vertical"
             android:textColor="@color/black"
             android:textColorHint="@color/grey"
             android:textSize="18sp"
-            app:spinner_arrow_show="false"
+            android:verticalScrollbarPosition="right"
             app:spinner_item_array="@array/EducationType"
+            app:spinner_arrow_gravity="end"
+            app:spinner_arrow_show="true"
+            app:spinner_arrow_tint="@color/darkBlue"
+            app:spinner_divider_color="@color/brightGrey"
             app:spinner_divider_show="true"
             app:spinner_divider_size="0.4dp"
-            app:spinner_divider_color="@color/darkBlue"
-            app:spinner_item_height="46dp"
-            app:spinner_popup_animation="dropdown"
-            app:spinner_popup_background="@color/brightBG" />
-
-        <com.skydoves.powerspinner.PowerSpinnerView
-            android:id="@+id/FacultiesSpinner"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:background="@color/brightBG"
-            android:padding="10dp"
-            android:hint="@string/selectEducationType"
-            android:textColor="@color/black"
-            android:textColorHint="@color/grey"
-            android:textSize="18sp"
-            android:visibility="gone"
-            app:spinner_arrow_show="false"
-            app:spinner_divider_show="true"
-            app:spinner_divider_size="0.4dp"
-            app:spinner_divider_color="@color/darkBlue"
-            app:spinner_item_height="46dp"
+            app:spinner_item_height="58dp"
             app:spinner_popup_animation="dropdown"
             app:spinner_popup_background="@color/brightBG"
             app:spinner_popup_elevation="14dp"
+
             />
+
+        <com.skydoves.powerspinner.PowerSpinnerView
+            android:id="@+id/FacultiesSpinner"
+            style="@style/PowerSpinnerStyle"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:layout_margin="10dp"
+            android:background="@color/brightBG"
+            android:fadeScrollbars="false"
+            android:fontFamily="@font/montserrat_bold"
+            android:gravity="left|center"
+            android:hint="@string/selectFaculty"
+            android:paddingStart="16dp"
+            android:scrollbarAlwaysDrawVerticalTrack="true"
+            android:scrollbarFadeDuration="0"
+            android:scrollbarSize="20dp"
+            android:scrollbarStyle="outsideInset"
+            android:scrollbarThumbVertical="@android:color/black"
+            android:scrollbars="vertical"
+            android:textColor="@color/black"
+            android:textColorHint="@color/grey"
+            android:textSize="18sp"
+            android:verticalScrollbarPosition="right"
+            android:visibility="gone"
+            app:spinner_arrow_gravity="end"
+            app:spinner_arrow_show="true"
+            app:spinner_arrow_tint="@color/darkBlue"
+            app:spinner_divider_color="@color/brightGrey"
+            app:spinner_divider_show="true"
+            app:spinner_divider_size="0.4dp"
+            app:spinner_item_height="58dp"
+            app:spinner_popup_animation="dropdown"
+            app:spinner_popup_background="@color/brightBG"
+            app:spinner_popup_elevation="14dp"
+            app:spinner_popup_max_height="522dp" />
 
         <EditText
             android:id="@+id/Course"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginBottom="16dp"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:layout_gravity="left|center"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+
             android:animateLayoutChanges="true"
-            android:autofillHints=""
+            android:background="@android:color/transparent"
+            android:fontFamily="@font/montserrat_bold"
             android:hint="@string/Course"
             android:inputType="numberDecimal"
             android:padding="10dp"
-            android:textAlignment="center"
+            android:textAlignment="gravity"
             android:textColorHighlight="#000000"
             android:textColorHint="#808080"
-            android:textSize="24sp"
+            android:textSize="20sp"
             android:visibility="gone" />
 
         <com.skydoves.powerspinner.PowerSpinnerView
             android:id="@+id/GroupSpinner"
+            style="@style/PowerSpinnerStyle"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:gravity="center"
+            android:layout_height="80dp"
+            android:layout_margin="10dp"
             android:background="@color/brightBG"
-            android:padding="10dp"
-            android:hint="@string/selectEducationType"
+            android:fadeScrollbars="false"
+            android:fontFamily="@font/montserrat_bold"
+            android:gravity="left|center"
+            android:hint="@string/selectGroup"
+            android:paddingStart="16dp"
+            android:scrollbarAlwaysDrawVerticalTrack="true"
+            android:scrollbarFadeDuration="0"
+            android:scrollbarSize="20dp"
+            android:scrollbarStyle="outsideInset"
+            android:scrollbarThumbVertical="@android:color/black"
+            android:scrollbars="vertical"
             android:textColor="@color/black"
             android:textColorHint="@color/grey"
             android:textSize="18sp"
+            android:verticalScrollbarPosition="right"
             android:visibility="gone"
-            app:spinner_arrow_show="false"
+            app:spinner_arrow_gravity="end"
+            app:spinner_arrow_show="true"
+            app:spinner_arrow_tint="@color/darkBlue"
+            app:spinner_divider_color="@color/brightGrey"
             app:spinner_divider_show="true"
             app:spinner_divider_size="0.4dp"
-            app:spinner_divider_color="@color/darkBlue"
-            app:spinner_item_height="46dp"
+            app:spinner_item_height="58dp"
             app:spinner_popup_animation="dropdown"
             app:spinner_popup_background="@color/brightBG"
-            app:spinner_popup_elevation="14dp" />
+            app:spinner_popup_elevation="14dp"
+            app:spinner_popup_max_height="290dp" />
 
-        <Button
+
+        <com.dx.dxloadingbutton.lib.LoadingButton
+            android:id="@+id/SaveButton"
+            android:layout_width="180dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:layout_marginBottom="16dp"
+            android:contentDescription="@string/SaveButton"
+            android:fontFamily="@font/montserrat_bold"
+            android:foregroundTint="@color/darkBlue"
+            android:onClick="SaveButtonPressed"
+            android:visibility="gone"
+            app:lb_btnColor="@color/darkBlue"
+            app:lb_btnText="@string/SaveButton"
+            app:lb_resetAfterFailed="true"
+            app:lb_btnRippleColor="#000000"
+            app:lb_btnDisabledColor="#cccccc"
+            app:lb_disabledTextColor="#999999"
+            app:lb_cornerRadius="32dp"
+            app:lb_rippleEnable="true"	 />
+
+        <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
             android:id="@+id/confirm_faculty_course"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="140dp"
+            android:layout_height="60dp"
             android:layout_gravity="center"
             android:layout_marginBottom="16dp"
             android:backgroundTint="@color/darkBlue"
+            android:fontFamily="@font/montserrat_bold"
             android:onClick="ConfirmButtonPressed"
             android:text="@string/confirm"
             android:textColor="#FFFFFF"
-            android:textColorHighlight="#FFFFFF" />
-
-        <Button
-            android:id="@+id/SaveButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginBottom="16dp"
-            android:backgroundTint="@color/darkBlue"
-            android:onClick="SaveButtonPressed"
-            android:text="@string/SaveButton"
-            android:textColor="#FFFFFF"
             android:textColorHighlight="#FFFFFF"
-            android:visibility="gone" />
+            app:spinning_bar_color="#FFF"
+            app:spinning_bar_padding="6dp"
+            app:spinning_bar_width="4dp" />
 
         <Button
             android:id="@+id/clear_button"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:layout_gravity="center"
             android:backgroundTint="@color/darkBlue"
+            android:fontFamily="@font/montserrat_bold"
             android:onClick="ClearAll"
             android:text="@string/clear"
             android:textColor="#FFFFFF"
             android:textColorHighlight="#FFFFFF" />
 
     </LinearLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            android:foregroundTint="@color/darkBlue"
+            android:indeterminateTint="@color/darkBlue"
+            android:progressTint="@color/darkBlue"
+            android:visibility="invisible" />
+    </FrameLayout>
+
 
 </RelativeLayout>
