--- a/app/src/main/res/layout/basic_main_activity.xml
+++ b/app/src/main/res/layout/basic_main_activity.xml
@@ -8,12 +8,80 @@
     android:gravity="center_horizontal"
     tools:context=".BasicMainActivity">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:textSize="20sp"
-        tools:layout_editor_absoluteX="211dp"
-        tools:layout_editor_absoluteY="392dp" />
+    <RelativeLayout
+        android:id="@+id/upperBG"
+        android:layout_width="match_parent"
+        android:layout_height="160dp"
+        android:background="@color/brightBlue">
+
+        <TextView
+            android:id="@+id/WindowName"
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:layout_marginStart="28dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="20dp"
+            android:fontFamily="@font/montserrat_bold"
+            android:text="Расписание"
+            android:textColor="@color/white"
+            android:textSize="30sp" />
+
+        <Button
+            android:layout_width="200dp"
+            android:layout_height="48dp"
+            android:layout_below="@+id/WindowName"
+            android:fontFamily="@font/montserrat_bold"
+            android:gravity="bottom|center"
+            android:text="Расписание"
+            android:textSize="18sp" />
+
+        <Button
+            android:layout_width="200dp"
+            android:layout_height="48dp"
+            android:layout_below="@+id/WindowName"
+            android:fontFamily="@font/montserrat_bold"
+            android:layout_marginStart="220dp"
+            android:gravity="bottom|center"
+            android:text="Настройки"
+            android:textSize="18sp" />
+
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/upperBG">
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <TextView
+                android:id="@+id/timeTableURL"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp"
+                android:text="Тут будет инфа"
+                android:textSize="20sp" />
+        </ScrollView>
+    </RelativeLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            android:indeterminateTint="@color/darkBlue"
+            android:visibility="gone" />
+    </FrameLayout>
 </RelativeLayout>
